@@ -11,7 +11,6 @@ import com.yahoo.component.Version;
 import com.yahoo.component.annotation.Inject;
 import com.yahoo.component.provider.ComponentRegistry;
 import com.yahoo.config.application.api.ApplicationPackage;
-import com.yahoo.config.application.api.ValidationOverrides;
 import com.yahoo.config.model.ConfigModelRegistry;
 import com.yahoo.config.model.MapConfigModelRegistry;
 import com.yahoo.config.model.NullConfigModelRegistry;
@@ -31,14 +30,12 @@ import com.yahoo.config.provision.Zone;
 import com.yahoo.vespa.config.VespaVersion;
 import com.yahoo.vespa.model.application.validation.Validation;
 import com.yahoo.vespa.model.application.validation.Validator;
-import com.yahoo.yolean.Exceptions;
 import org.xml.sax.SAXException;
 
 import java.io.IOException;
 import java.time.Clock;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.logging.Level;
@@ -98,7 +95,7 @@ public class VespaModelFactory implements ModelFactory {
         } else {
             this.configModelRegistry = configModelRegistry;
         }
-        this.modelImporters = Collections.emptyList();
+        this.modelImporters = List.of();
         this.additionalValidators = List.of();
         this.zone = zone;
         this.clock = clock;
