@@ -22,12 +22,10 @@ import com.yahoo.vespa.model.content.engines.ProtonEngine;
 import com.yahoo.vespa.model.search.IndexedSearchCluster;
 import com.yahoo.vespa.model.search.SearchCluster;
 import com.yahoo.vespa.model.search.SearchNode;
-import com.yahoo.vespa.model.search.StreamingSearchCluster;
 import com.yahoo.vespa.model.test.utils.VespaModelCreatorWithMockPkg;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 
@@ -63,8 +61,7 @@ public class ContentBuilderTest extends DomBuilderTest {
                         "</content>");
 
         ContentSearchCluster s = a.getSearch();
-        assertFalse(s.hasIndexedCluster());
-        assertTrue(s.getClusters().isEmpty());
+        assertFalse(s.hasSearchCluster());
 
         assertTrue(a.getPersistence() instanceof com.yahoo.vespa.model.content.engines.DummyPersistence.Factory);
     }
@@ -83,8 +80,7 @@ public class ContentBuilderTest extends DomBuilderTest {
                         "</content>");
 
         ContentSearchCluster s = a.getSearch();
-        assertFalse(s.hasIndexedCluster());
-        assertTrue(s.getClusters().isEmpty());
+        assertFalse(s.hasSearchCluster());
 
         assertTrue(a.getPersistence() instanceof ProtonEngine.Factory);
 
@@ -108,8 +104,7 @@ public class ContentBuilderTest extends DomBuilderTest {
                         "</content>");
 
         ContentSearchCluster s = a.getSearch();
-        assertFalse(s.hasIndexedCluster());
-        assertTrue(s.getClusters().isEmpty());
+        assertFalse(s.hasSearchCluster());
 
         assertTrue(a.getPersistence() instanceof ProtonEngine.Factory);
 
@@ -130,9 +125,8 @@ public class ContentBuilderTest extends DomBuilderTest {
                         "</content>");
 
         ContentSearchCluster s = a.getSearch();
-        assertFalse(s.hasIndexedCluster());
-        assertTrue(s.getClusters().isEmpty());
-        assertNull(s.getIndexed());
+        assertFalse(s.hasSearchCluster());
+        assertNull(s.getSearchCluster());
 
         assertNull(a.getRootGroup().getName());
         assertNull(a.getRootGroup().getIndex());
@@ -151,11 +145,10 @@ public class ContentBuilderTest extends DomBuilderTest {
 
         ContentCluster c = CollectionUtil.first(m.getContentClusters().values());
         ContentSearchCluster s = c.getSearch();
-        assertTrue(s.hasIndexedCluster());
-        assertEquals(1, s.getClusters().size());
-        assertNotNull(s.getIndexed());
-        assertEquals("clu", s.getIndexed().getClusterName());
-        assertEquals(7.3, s.getIndexed().getQueryTimeout(), 0.0);
+        assertTrue(s.hasSearchCluster());
+        assertNotNull(s.getSearchCluster());
+        assertEquals("clu", s.getSearchCluster().getClusterName());
+        assertEquals(7.3, s.getSearchCluster().getQueryTimeout(), 0.0);
 
         assertTrue(c.getPersistence() instanceof ProtonEngine.Factory);
         assertEquals(1, c.getStorageCluster().getChildren().size());
@@ -176,7 +169,7 @@ public class ContentBuilderTest extends DomBuilderTest {
         String services = getServices("<node hostalias='mockhost' distribution-key='0'/>" +
                 "<node hostalias='mockhost' distribution-key='1'/>");
         VespaModel m = new VespaModelCreatorWithMockPkg(createAppWithMusic(getHosts(), services)).create();
-        IndexedSearchCluster sc = m.getContentClusters().get("clu").getSearch().getIndexed();
+        IndexedSearchCluster sc = m.getContentClusters().get("clu").getSearch().getSearchCluster();
         assertEquals(2, sc.getSearchNodeCount());
     }
 
@@ -197,12 +190,10 @@ public class ContentBuilderTest extends DomBuilderTest {
         ContentSearchCluster s;
 
         s = cluster.getSearch();
-        assertFalse(s.hasIndexedCluster());
-        assertEquals(1, s.getClusters().size());
-        assertNull(s.getIndexed());
-        SearchCluster sc = s.getClusters().get(musicClusterId + ".music");
-        assertEquals(musicClusterId + ".music", sc.getClusterName());
-        assertEquals(musicClusterId, ((StreamingSearchCluster) sc).getStorageRouteSpec());
+        assertTrue(s.hasSearchCluster());
+        SearchCluster sc = s.getSearchCluster();
+        assertEquals(musicClusterId, sc.getClusterName());
+        assertEquals(musicClusterId, sc.getStorageRouteSpec());
 
         assertTrue(cluster.getPersistence() instanceof ProtonEngine.Factory);
         assertEquals(1, cluster.getStorageCluster().getChildren().size());
@@ -237,24 +228,11 @@ public class ContentBuilderTest extends DomBuilderTest {
                         "      <node hostalias=\"mockhost\" distribution-key=\"0\"/>" +
                         "    </group>" +
                         "</content>");
-        ContentSearchCluster s;
-
-        s = cluster.getSearch();
-        assertFalse(s.hasIndexedCluster());
-        assertEquals(2, s.getClusters().size());
-        assertNull(s.getIndexed());
-        {
-            String id = musicClusterId + ".book";
-            SearchCluster sc = s.getClusters().get(id);
-            assertEquals(id, sc.getClusterName());
-            assertEquals(musicClusterId, ((StreamingSearchCluster) sc).getStorageRouteSpec());
-        }
-        {
-            String id = musicClusterId + ".music";
-            SearchCluster sc = s.getClusters().get(id);
-            assertEquals(id, sc.getClusterName());
-            assertEquals(musicClusterId, ((StreamingSearchCluster) sc).getStorageRouteSpec());
-        }
+        ContentSearchCluster s = cluster.getSearch();
+        assertTrue(s.hasSearchCluster());
+        assertEquals(2, s.getSearchCluster().getDocumentDbs().size());
+        assertTrue(s.getSearchCluster().hasDocumentDB("book"));
+        assertTrue(s.getSearchCluster().hasDocumentDB("music"));
 
         assertTrue(cluster.getPersistence() instanceof ProtonEngine.Factory);
         assertEquals(1, cluster.getStorageCluster().getChildren().size());
@@ -277,10 +255,9 @@ public class ContentBuilderTest extends DomBuilderTest {
         ContentSearchCluster s;
 
         s = b.getSearch();
-        assertTrue(s.hasIndexedCluster());
-        assertEquals(1, s.getClusters().size());
-        assertNotNull(s.getIndexed());
-        assertEquals("b", s.getIndexed().getClusterName());
+        assertTrue(s.hasSearchCluster());
+        assertNotNull(s.getSearchCluster());
+        assertEquals("b", s.getSearchCluster().getClusterName());
 
         assertTrue(b.getPersistence() instanceof ProtonEngine.Factory);
         assertEquals(1, b.getStorageCluster().getChildren().size());
@@ -309,8 +286,8 @@ public class ContentBuilderTest extends DomBuilderTest {
         ContentSearchCluster s;
 
         s = b.getSearch();
-        assertTrue(s.hasIndexedCluster());
-        assertNotNull(s.getIndexed());
+        assertTrue(s.hasSearchCluster());
+        assertNotNull(s.getSearchCluster());
         assertEquals(2, b.getStorageCluster().getChildren().size());
         assertTrue(b.getRootGroup().getMmapNoCoreLimit().isPresent());
         assertEquals(200000, b.getRootGroup().getMmapNoCoreLimit().get().longValue());
@@ -335,8 +312,8 @@ public class ContentBuilderTest extends DomBuilderTest {
         ContentSearchCluster s;
 
         s = b.getSearch();
-        assertTrue(s.hasIndexedCluster());
-        assertNotNull(s.getIndexed());
+        assertTrue(s.hasSearchCluster());
+        assertNotNull(s.getSearchCluster());
         assertEquals(1, b.getStorageCluster().getChildren().size());
 
         assertEquals(1, s.getSearchNodes().size());
@@ -363,11 +340,9 @@ public class ContentBuilderTest extends DomBuilderTest {
                         "      <node hostalias=\"mockhost\" distribution-key=\"0\" />" +
                         "    </group>" +
                         "</content>", new TestProperties().setEnvironmentVariables(List.of("MY_1_ENV=xyz abc", "MY_2_ENV=2")));
-        ContentSearchCluster s;
-
-        s = b.getSearch();
-        assertTrue(s.hasIndexedCluster());
-        assertNotNull(s.getIndexed());
+        ContentSearchCluster s = b.getSearch();
+        assertTrue(s.hasSearchCluster());
+        assertNotNull(s.getSearchCluster());
         assertEquals(1, b.getStorageCluster().getChildren().size());
 
         assertEquals(1, s.getSearchNodes().size());
@@ -392,8 +367,8 @@ public class ContentBuilderTest extends DomBuilderTest {
         ContentSearchCluster s;
 
         s = b.getSearch();
-        assertTrue(s.hasIndexedCluster());
-        assertNotNull(s.getIndexed());
+        assertTrue(s.hasSearchCluster());
+        assertNotNull(s.getSearchCluster());
         assertEquals(2, b.getStorageCluster().getChildren().size());
         assertTrue(b.getRootGroup().getCoreOnOOM().isPresent());
         assertTrue(b.getRootGroup().getCoreOnOOM().get());
@@ -417,8 +392,8 @@ public class ContentBuilderTest extends DomBuilderTest {
                         "    </group>" +
                         "</content>");
         ContentSearchCluster s = b.getSearch();
-        assertTrue(s.hasIndexedCluster());
-        assertNotNull(s.getIndexed());
+        assertTrue(s.hasSearchCluster());
+        assertNotNull(s.getSearchCluster());
         assertEquals(2, b.getStorageCluster().getChildren().size());
         assertFalse(b.getRootGroup().getCoreOnOOM().isPresent());
 
@@ -441,8 +416,8 @@ public class ContentBuilderTest extends DomBuilderTest {
                         "    </group>" +
                         "</content>");
         ContentSearchCluster s = b.getSearch();
-        assertTrue(s.hasIndexedCluster());
-        assertNotNull(s.getIndexed());
+        assertTrue(s.hasSearchCluster());
+        assertNotNull(s.getSearchCluster());
         assertEquals(2, b.getStorageCluster().getChildren().size());
         assertFalse(b.getRootGroup().getMmapNoCoreLimit().isPresent());
 
@@ -465,8 +440,8 @@ public class ContentBuilderTest extends DomBuilderTest {
                         "    </group>" +
                         "</content>");
         ContentSearchCluster s = b.getSearch();
-        assertTrue(s.hasIndexedCluster());
-        assertNotNull(s.getIndexed());
+        assertTrue(s.hasSearchCluster());
+        assertNotNull(s.getSearchCluster());
         assertEquals(2, b.getStorageCluster().getChildren().size());
         assertFalse(b.getRootGroup().getCoreOnOOM().isPresent());
 
@@ -491,8 +466,8 @@ public class ContentBuilderTest extends DomBuilderTest {
                         "    </group>" +
                         "</content>");
         ContentSearchCluster s = b.getSearch();
-        assertTrue(s.hasIndexedCluster());
-        assertNotNull(s.getIndexed());
+        assertTrue(s.hasSearchCluster());
+        assertNotNull(s.getSearchCluster());
         assertEquals(4, b.getStorageCluster().getChildren().size());
         assertTrue(b.getRootGroup().getNoVespaMalloc().isPresent());
         assertEquals("proton", b.getRootGroup().getNoVespaMalloc().get());
@@ -525,8 +500,8 @@ public class ContentBuilderTest extends DomBuilderTest {
                         "    </group>" +
                         "</content>");
         ContentSearchCluster s = b.getSearch();
-        assertTrue(s.hasIndexedCluster());
-        assertNotNull(s.getIndexed());
+        assertTrue(s.hasSearchCluster());
+        assertNotNull(s.getSearchCluster());
         assertEquals(4, b.getStorageCluster().getChildren().size());
         assertFalse(b.getRootGroup().getNoVespaMalloc().isPresent());
         assertFalse(b.getRootGroup().getVespaMalloc().isPresent());
@@ -556,8 +531,8 @@ public class ContentBuilderTest extends DomBuilderTest {
         ContentSearchCluster s;
 
         s = b.getSearch();
-        assertTrue(s.hasIndexedCluster());
-        assertNotNull(s.getIndexed());
+        assertTrue(s.hasSearchCluster());
+        assertNotNull(s.getSearchCluster());
         assertEquals(2, b.getStorageCluster().getChildren().size());
         assertTrue(b.getStorageCluster().getChildren().get("0").getAffinity().isPresent());
         assertEquals(0, b.getStorageCluster().getChildren().get("0").getAffinity().get().cpuSocket());
@@ -591,8 +566,8 @@ public class ContentBuilderTest extends DomBuilderTest {
         ContentSearchCluster s;
 
         s = b.getSearch();
-        assertTrue(s.hasIndexedCluster());
-        assertNotNull(s.getIndexed());
+        assertTrue(s.hasSearchCluster());
+        assertNotNull(s.getSearchCluster());
         assertEquals(6, b.getStorageCluster().getChildren().size());
         assertTrue(b.getRootGroup().useCpuSocketAffinity());
 
@@ -630,18 +605,17 @@ public class ContentBuilderTest extends DomBuilderTest {
     void requireBug5357273() {
         try {
             createContent(
-                    "  <content version='1.0' id='storage'>\n" +
-                            "      <redundancy>3</redundancy>\n" +
-                            "    <documents>" +
-                            "       <document type='music' mode='index'/>" +
-                            "    </documents>" +
-                            "      <group>\n" +
-                            "        <node hostalias='mockhost' distribution-key='0' />\n" +
-                            "      </group>\n" +
-                            "      <engine>\n" +
-                            "       <dummy/>\n" +
-                            "      </engine>\n" +
-                            "  </content>\n");
+                    """
+                              <content version='1.0' id='storage'>
+                                  <redundancy>3</redundancy>
+                                <documents>       <document type='music' mode='index'/>    </documents>      <group>
+                                    <node hostalias='mockhost' distribution-key='0' />
+                                  </group>
+                                  <engine>
+                                   <dummy/>
+                                  </engine>
+                              </content>
+                            """);
 
             fail();
         } catch (Exception e) {
@@ -719,8 +693,8 @@ public class ContentBuilderTest extends DomBuilderTest {
                         "  </group>" +
                         "</content>");
         ProtonConfig.Builder builder = new ProtonConfig.Builder();
-        content.getSearch().getIndexed().getSearchNode(0).cascadeConfig(builder);
-        content.getSearch().getIndexed().getSearchNode(0).addUserConfig(builder);
+        content.getSearch().getSearchCluster().getSearchNode(0).cascadeConfig(builder);
+        content.getSearch().getSearchCluster().getSearchNode(0).addUserConfig(builder);
         ProtonConfig config = new ProtonConfig(builder);
         assertEquals(1, config.search().mmap().options().size());
         assertEquals(ProtonConfig.Search.Mmap.Options.POPULATE, config.search().mmap().options(0));
@@ -850,8 +824,8 @@ public class ContentBuilderTest extends DomBuilderTest {
 
     private ProtonConfig getProtonConfig(ContentCluster content) {
         ProtonConfig.Builder configBuilder = new ProtonConfig.Builder();
-        content.getSearch().getIndexed().getSearchNode(0).cascadeConfig(configBuilder);
-        content.getSearch().getIndexed().getSearchNode(0).addUserConfig(configBuilder);
+        content.getSearch().getSearchCluster().getSearchNode(0).cascadeConfig(configBuilder);
+        content.getSearch().getSearchCluster().getSearchNode(0).addUserConfig(configBuilder);
 
         return new ProtonConfig(configBuilder);
     }
@@ -901,8 +875,8 @@ public class ContentBuilderTest extends DomBuilderTest {
         VespaModel m = new VespaModelCreatorWithMockPkg(new MockApplicationPackage.Builder()
                                                                 .withHosts(getHosts())
                                                                 .withServices(combined)
-                                                                .withSchemas(Arrays.asList(MockApplicationPackage.MUSIC_SCHEMA,
-                                                                                           MockApplicationPackage.BOOK_SCHEMA))
+                                                                .withSchemas(List.of(MockApplicationPackage.MUSIC_SCHEMA,
+                                                                                     MockApplicationPackage.BOOK_SCHEMA))
                                                                 .build())
                 .create();
 
