@@ -41,6 +41,7 @@ import com.yahoo.vespa.config.server.model.TestModelFactory;
 import com.yahoo.vespa.config.server.modelfactory.ModelFactoryRegistry;
 import com.yahoo.vespa.config.server.provision.HostProvisionerProvider;
 import com.yahoo.vespa.config.server.tenant.ContainerEndpointsCache;
+import com.yahoo.vespa.config.server.tenant.DefaultEndpointCertificateSecretStore;
 import com.yahoo.vespa.config.server.tenant.EndpointCertificateMetadataStore;
 import com.yahoo.vespa.config.server.tenant.EndpointCertificateRetriever;
 import com.yahoo.vespa.config.server.tenant.TenantRepository;
@@ -60,7 +61,6 @@ import java.security.KeyPair;
 import java.security.cert.X509Certificate;
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -134,7 +134,8 @@ public class SessionPreparerTest {
                 zone,
                 flagSource,
                 secretStore,
-                OnnxModelCost.disabled());
+                OnnxModelCost.disabled(),
+                List.of(new DefaultEndpointCertificateSecretStore(secretStore)));
     }
 
     @Test(expected = InvalidApplicationException.class)
@@ -190,7 +191,7 @@ public class SessionPreparerTest {
     public void require_exception_for_overlapping_host() throws IOException {
         FilesApplicationPackage app = getApplicationPackage(testApp);
         HostRegistry hostValidator = new HostRegistry();
-        hostValidator.update(applicationId("foo"), Collections.singletonList("mytesthost"));
+        hostValidator.update(applicationId("foo"), List.of("mytesthost"));
         preparer.prepare(hostValidator, new BaseDeployLogger(), new PrepareParams.Builder().applicationId(applicationId("default")).build(),
                          Optional.empty(), Instant.now(), app.getAppDir(), app, createSessionZooKeeperClient());
     }
@@ -204,7 +205,7 @@ public class SessionPreparerTest {
         FilesApplicationPackage app = getApplicationPackage(testApp);
         HostRegistry hostValidator = new HostRegistry();
         ApplicationId applicationId = applicationId();
-        hostValidator.update(applicationId, Collections.singletonList("mytesthost"));
+        hostValidator.update(applicationId, List.of("mytesthost"));
         preparer.prepare(hostValidator, logger, new PrepareParams.Builder().applicationId(applicationId).build(),
                          Optional.empty(), Instant.now(), app.getAppDir(), app,
                          createSessionZooKeeperClient());
@@ -312,7 +313,7 @@ public class SessionPreparerTest {
         Path tenantPath = TenantRepository.getTenantPath(applicationId.tenant());
         Optional<EndpointCertificateSecrets> endpointCertificateSecrets = new EndpointCertificateMetadataStore(curator, tenantPath)
                 .readEndpointCertificateMetadata(applicationId)
-                .flatMap(p -> new EndpointCertificateRetriever(secretStore).readEndpointCertificateSecrets(p));
+                .flatMap(p -> new EndpointCertificateRetriever(List.of(new DefaultEndpointCertificateSecretStore(secretStore))).readEndpointCertificateSecrets(p));
 
         assertTrue(endpointCertificateSecrets.isPresent());
         assertTrue(endpointCertificateSecrets.get().key().startsWith("-----BEGIN EC PRIVATE KEY"));
