@@ -13,6 +13,7 @@ import com.yahoo.config.provision.ApplicationName;
 import com.yahoo.config.provision.InstanceName;
 import com.yahoo.config.provision.TenantName;
 import com.yahoo.config.provision.Zone;
+import com.yahoo.container.jdisc.secretstore.SecretStore;
 import com.yahoo.vespa.config.server.ConfigServerDB;
 import com.yahoo.vespa.config.server.MockSecretStore;
 import com.yahoo.vespa.config.server.ServerCache;
@@ -41,10 +42,10 @@ import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.ExpectedException;
 import org.junit.rules.TemporaryFolder;
+import org.mockito.Mock;
 import org.xml.sax.SAXException;
 import java.io.IOException;
 import java.time.Clock;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 
@@ -172,7 +173,7 @@ public class TenantRepositoryTest {
     @Test
     public void testTenantWatching() throws Exception {
         TenantName newTenant = TenantName.from("newTenant");
-        List<TenantName> expectedTenants = Arrays.asList(TenantName.defaultName(), newTenant);
+        List<TenantName> expectedTenants = List.of(TenantName.defaultName(), newTenant);
         try {
             tenantRepository.addTenant(newTenant);
             // Poll for the watcher to pick up the tenant from zk, and add it
@@ -211,6 +212,7 @@ public class TenantRepositoryTest {
     private static class FailingDuringBootstrapTenantRepository extends TenantRepository {
 
         private static final FlagSource flagSource = new InMemoryFlagSource();
+        private static final SecretStore mockSecretStore = new MockSecretStore();
 
         public FailingDuringBootstrapTenantRepository(ConfigserverConfig configserverConfig) {
             super(new HostRegistry(),
@@ -221,7 +223,7 @@ public class TenantRepositoryTest {
                   new FileDistributionFactory(configserverConfig, new FileDirectory(configserverConfig)),
                   flagSource,
                   new InThreadExecutorService(),
-                  new MockSecretStore(),
+                  mockSecretStore,
                   HostProvisionerProvider.empty(),
                   configserverConfig,
                   new ConfigServerDB(configserverConfig),
@@ -232,7 +234,8 @@ public class TenantRepositoryTest {
                   new TenantApplicationsTest.MockConfigActivationListener(),
                   new MockTenantListener(),
                   new ZookeeperServerConfig.Builder().myid(0).build(),
-                  OnnxModelCost.disabled());
+                  OnnxModelCost.disabled(),
+                  List.of(new DefaultEndpointCertificateSecretStore(mockSecretStore)));
         }
 
         @Override
