@@ -22,8 +22,6 @@ import com.yahoo.search.result.ErrorMessage;
 import com.yahoo.search.searchchain.Execution;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -99,7 +97,7 @@ public class PageTemplateSearcher extends Searcher {
      * @param resolvers the resolvers to use, in addition to the default resolvers
      */
     public PageTemplateSearcher(PageTemplateRegistry templateRegistry, Resolver... resolvers) {
-        this(templateRegistry, Arrays.asList(resolvers));
+        this(templateRegistry, List.of(resolvers));
     }
 
     private PageTemplateSearcher(PageTemplateRegistry templateRegistry, List<Resolver> resolvers) {
@@ -138,14 +136,14 @@ public class PageTemplateSearcher extends Searcher {
         List<String> pageIds = (List<String>) query.properties().get(pageIdListName);
         if (pageIds == null) {
             String pageIdString = query.properties().getString(pageIdName,"").trim();
-            if (pageIdString.length() > 0)
-                pageIds = Arrays.asList(pageIdString.split(" "));
+            if (!pageIdString.isEmpty())
+                pageIds = List.of(pageIdString.split(" "));
         }
 
         // If none set, just return the default or null if none
         if (pageIds == null) {
             PageElement defaultPage=templateRegistry.getComponent("default");
-            return (defaultPage == null ? Collections.<PageElement>emptyList() : Collections.singletonList(defaultPage));
+            return (defaultPage == null ? List.of() : List.of(defaultPage));
         }
 
         // Resolve the id list to page templates
@@ -179,7 +177,7 @@ public class PageTemplateSearcher extends Searcher {
 
         addErrorIfSameSourceMultipleTimes(pages,pageSources,query);
 
-        if (query.getModel().getSources().size() > 0) {
+        if (!query.getModel().getSources().isEmpty()) {
             // Add properties if the source list is set explicitly, but do not modify otherwise
             addParametersForIncludedSources(pageSources, query);
             return;
@@ -208,7 +206,7 @@ public class PageTemplateSearcher extends Searcher {
 
     private void addParametersForIncludedSources(Set<Source> sources, Query query) {
         for (Source source : sources) {
-            if (source.parameters().size() > 0 && query.getModel().getSources().contains(source.getName()))
+            if (!source.parameters().isEmpty() && query.getModel().getSources().contains(source.getName()))
                 addParameters(source,query);
         }
     }
